Initial documentation push

--- a/docs/overrides/partials/copyright.html
+++ b/docs/overrides/partials/copyright.html
@@ -6,7 +6,7 @@
     {% endif %}
     {% if not config.extra.generator == false %}
     Made by the
-    <a href="https://github.com/srl-labs/containerlab/graphs/contributors" target="_blank" rel="noopener">
+    <a href="https://github.com/antimony-team" target="_blank" rel="noopener">
         Antimony team
     </a>
     {% endif %}
